Opened 12 years ago
Closed 10 years ago
#9507 closed bug (fixed)
Deskbar expanded mode label truncation not working sometimes.
Reported by: | jstressman | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Some of the items listed in the expanded mode tracker listing are not being properly truncated.
I can see this for both Tracker and Caya right now at a glance.
hrev45336 gcc2h
I'm attaching a shot showing the tracker windows not being truncated properly.
Attachments (1)
Change History (5)
by , 12 years ago
Attachment: | deskbar name truncation1.png added |
---|
comment:1 by , 12 years ago
comment:2 by , 12 years ago
An additional note... I can "force" this to happen repeatedly for Tracker window titles by quitting and restarting Tracker.
Titles that were previously tructated correctly will then not be after restarting it. Not sure if this helps figure out the issue.
comment:3 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
Another side effect of this is that the tooltip on hover to show the whole name also no longer works on those items that aren't being truncated properly.