Deskbar: Truncate menu item labels refactor

* Create a new TTruncatableMenuItem class to store the truncated string
  and share the label truncation code between TTeamMenuItem and
  TWindowMenuItem. In the future more shared code may be added to
  this class, if so, the class name may change.
* The TTeamMenuItem and TWindowMenuItem classes inherit from
  TTruncatableMenuItem, which inherits from BMenuItem.
* Make sure to truncate the label before drawing it in all cases.
* Some other related refactoring.

Fixes #9507